--- a/.env_example
+++ b/.env_example
@@ -1,7 +1,12 @@
 SECRET_KEY=asfdspafiaspdfisndfsdfkjsdfjksdfj
 DEBUG=1
+TIMER=5.0
+TABLE_NAME=unwind_test
+SHEET_NAME=Лист1
 POSTGRES_NAME=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASS=postgres
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
