--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ python-dotenv = "^0.21.0"
 psycopg2-binary = "^2.9.3"
 requests = "^2.28.1"
 xmltodict = "^0.13.0"
+gspread = "^5.5.0"
+celery = {extras = ["redis"], version = "^5.2.7"}
+redis = "^4.3.4"
+pandas = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 
