--- a/.env_example
+++ b/.env_example
@@ -10,3 +10,5 @@ POSTGRES_HOST=db
 POSTGRES_PORT=5432
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/0
+TELEGRAM_TOKEN=123123
+TELEGRAM_CHANNEL_ID=unwinddigital11
